fix spacing between the featured image and thumbnails

--- a/components/media-gallery/_media-gallery.css
+++ b/components/media-gallery/_media-gallery.css
@@ -97,11 +97,7 @@
     display: flex;
     align-items: center;
     position: relative;
-    margin-bottom: .125rem;
-
-    @media (--bp-x-desktop) {
-      margin-bottom: .3125rem;
-    }
+    margin-bottom: .3125rem;
 
     &--overlay {
       @media (--bp-desktop) {
